-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.7.0
-
None
If you have installed e.g. Android SDK version 3, this will be the default for new Qt 5 projects. However, Qt 5 only supports version 9 and up, causing compile errors which are difficult to understand (missing headers that the app is not including itself.)
This is a fairly typical problem, so we should make sure we default to lowest available version >= 9.
| For Gerrit Dashboard: QTCREATORBUG-9067 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 53433,1 | Android: Only show android sdk versions that are supported by qt | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |