Android: Only show android sdk versions that are supported by qt

That is at least android-9 for qt 5.

Task-number: QTCREATORBUG-9067
Change-Id: I977f8a35e5d2db2c645fe1a1bc52ef5d7b9f8b35
Reviewed-by: BogDan Vatra <bogdan@kde.org>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>